links, font, color

--- a/main.css
+++ b/main.css
@@ -155,13 +155,13 @@ body {
     --Grey900: #292929;
     /*292929 2c2c2c #161616*/
 
-    --Grey800: #4f4f4f;
-    /* 5f6368 */
+    --Grey800: #505050;
+    /* 5f6368 4f4f4f*/
 
 
-    --Grey700: #757575;
+    --Grey700: #787878;
 
-    /* #505050 83878a 787878 757575 7e7e7ea8a8a8*/
+    /* #505050 83878a 787878  757575*/
 
 
     --Grey600: #a5a5a5;
@@ -3084,7 +3084,7 @@ polygon {
     font-weight: 400;
     font-size: clamp(1em, 1.26vw, 1.5em);
     margin: 0;
-    color: var(--Grey600);
+    color: var(--Grey700);
 
 }
 
