--- a/main.css
+++ b/main.css
@@ -152,14 +152,14 @@ body {
 
 
 
-    --Grey900: #292929;
+    --Grey900: #1b1b1b;
     /*292929 2c2c2c #161616*/
 
     --Grey800: #505050;
     /* 5f6368 4f4f4f*/
 
 
-    --Grey700: #787878;
+    --Grey700: #707070;
 
     /* #505050 83878a 787878  757575*/
 
