--- a/main.css
+++ b/main.css
@@ -3562,22 +3562,22 @@ polygon {
     margin: 9px;
 }
 
-.IconSH {
+.iconSH {
     height: 1.8rem;
     margin: 2px;
 }
 
-.IconXS {
+.iconXS {
     width: 1.4rem;
     margin: 1px;
 }
 
-.IconCaseStudy {
+.iconCaseStudy {
     width: 2rem;
     margin: 1rem 0;
 }
 
-.IconS {
+.iconS {
     width: 2.6rem;
     margin: 2px;
 }
