--- a/main.css
+++ b/main.css
@@ -610,6 +610,9 @@ section {
         bottom: 32vh;
     }
 }
+/* new nav */
+
+/* new nav */
 
 /* 1. Enable smooth scrolling */
 /* 2. Make nav sticky */
