--- a/main.css
+++ b/main.css
@@ -117,19 +117,19 @@ body {
 }
 
 .SkylineBlue {
-    background-color: var(--colorBlack-dark);
+    background-color: var(--colorTeal-dark);
 }
 
 .colorLt {
-    background-color: var(--colorBlack-light);
+    background-color: var(--colorTeal-light);
 }
 
 .colorLter {
-    background-color: var(--colorBlack-lighter);
+    background-color: var(--colorTeal-lighter);
 }
 
 .colorLtest {
-    background-color: var(--colorBlack-lightest);
+    background-color: var(--colorTeal-lightest);
 }
 
 .colorAlet {
@@ -180,14 +180,14 @@ body {
     --Grey100: #F8F8F8;
 
     /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0 current green 1b563b*/
-    --colorBlack-dark: #9bb5b4;
+    --colorTeal-dark: #9bb5b4;
 
     --colorBlack-light: #AAD9D9;
     /*never change*/
 
     /* 368661 projects 296448*/
-    --colorBlack-lighter: #e6f6f6;
-    --colorBlack-lightest: #faffff;
+    --colorTeal-lighter: #e6f6f6;
+    --colorTeal-lightest: #faffff;
     --colorBlack-warm: #fcf5eb;
 
 
@@ -1114,7 +1114,7 @@ strong {
 }
 
 .textDecor.GREEN {
-    text-decoration-color: var(--colorBlack-light);
+    text-decoration-color: var(--colorTeal-light);
 }
 
 .textDecor.WS {
@@ -1197,7 +1197,13 @@ hr {
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
 }
-
+.elementCard.GLORIFY:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--GLORIFY-orange);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
 .elementCard.APPOINTA:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--APPOINTA-blue);
@@ -1232,7 +1238,7 @@ hr {
 
 .elementCard:hover {
     cursor: pointer;
-    border-bottom: 5px solid var(--colorBlack-light);
+    border-bottom: 5px solid var(--Grey900);
     transition: all 0.25s ease-in;
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
@@ -1584,16 +1590,16 @@ button.passwordArr {
     padding: 0.8em 0.5em;
     transition: background-color 0.3s ease;
     border-radius: 6px;
-    border: 0.01em solid var(--colorBlack-light);
+    border: 0.01em solid var(--colorTeal-light);
 
 
-    background: var(--colorBlack-lightest);
+    background: var(--colorTeal-lightest);
     transition: background-color 0.3s ease;
 
 }
 
 .elementInnerDemo:hover {
-    background: var(--colorBlack-lighter);
+    background: var(--colorTeal-lighter);
 }
 
 /* element = demo */
@@ -1605,9 +1611,9 @@ button.passwordArr {
     /*top 0.8, left and right 1*/
     margin-bottom: 1em;
     border-radius: 6px;
-    border: 0.06em solid var(--colorBlack-lighter);
-    color: var(--colorBlack-dark);
-    background: var(--colorBlack-lightest);
+    border: 0.06em solid var(--colorTeal-lighter);
+    color: var(--colorTeal-dark);
+    background: var(--colorTeal-lightest);
     transition: background-color 0.3s ease;
 }
 
@@ -1621,7 +1627,7 @@ button.passwordArr {
 }
 
 .Demo:hover {
-    background: var(--colorBlack-lighter);
+    background: var(--colorTeal-lighter);
 }
 
 .Demo.Holly {
@@ -2307,13 +2313,13 @@ button.passwordArr {
 .content-1of1::before {
     content: "1";
     font-weight: 300;
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 }
 
 .content-1of2::before {
     content: "1/2";
     font-weight: 300;
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 
 }
 
@@ -2321,7 +2327,7 @@ button.passwordArr {
     content: "1/3";
     font-weight: 300;
 
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 
 }
 
@@ -2329,7 +2335,7 @@ button.passwordArr {
     content: "1/4";
     font-weight: 300;
 
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 
 }
 
@@ -2337,7 +2343,7 @@ button.passwordArr {
     content: "1/6";
     font-weight: 300;
 
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 
 }
 
@@ -2345,7 +2351,7 @@ button.passwordArr {
     content: "1/12";
     font-weight: 300;
 
-    color: var(--colorBlack-dark);
+    color: var(--colorTeal-dark);
 
 }
 
@@ -2898,7 +2904,7 @@ input:checked~label.SEER {
 }
 
 .progress-bar {
-    background-color: var(--colorBlack-light);
+    background-color: var(--colorTeal-light);
     height: 3px;
     width: 0%;
 }
@@ -3420,7 +3426,7 @@ polygon {
     margin: 0 0 0.6em;
     height: 3px;
     width: 30px;
-    background-color: var(--colorBlack-light);
+    background-color: var(--colorTeal-light);
     border-radius: 20px;
     border: none;
 }
